feat: add hud and bot

--- a/DiceCup.html
+++ b/DiceCup.html
@@ -38,6 +38,7 @@
     <!--Canvas for FUDGE to render to-->
     <canvas class="fullscreen" id="canvas"></canvas>
     <div id="game"> </div>
+    <div id="hud"> </div>
     <div id="mainMenu">
         <div id="logoContainer">
             <img src="Game/Assets/images/temp_logo.png" id="logo">
