feat: add singleplayer menu

--- a/DiceCup.html
+++ b/DiceCup.html
@@ -34,38 +34,8 @@
 </head>
 
 <body>
-    <!--Dialog shown at startup only-->
-    <!-- <dialog>
-        <p>FUDGE Autoview</p>
-        <h1>Title (will be replaced by Autoview)</h1>
-        <p>click to start</p>
-    </dialog> -->
-    <!--Canvas for FUDGE to render to-->
-    <canvas class="fullscreen" id="canvas">
-    </canvas>
-    <div id="game"> </div>
-    <div id="hud"> </div>
-    <div id="mainMenu">
-        <div id="logoContainer">
-            <img src="Game/Assets/images/temp_logo.png" id="logo">
-        </div>
-        <div id="buttonContainer">
-            <button class="menuButtons" id="play">
-                <img src="Game/Assets/images/menuButtons/play.svg" class="menuButtonsIcons">
-            </button>
-            <button class="menuButtons" id="help">
-                <img src="Game/Assets/images/menuButtons/shop.svg" class="menuButtonsIcons">
-            </button>
-            <button class="menuButtons" id="shop">
-                <img src="Game/Assets/images/menuButtons/help.svg" class="menuButtonsIcons">
-            </button>
-            <button class="menuButtons" id="options">
-                <img src="Game/Assets/images/menuButtons/settings.svg" class="menuButtonsIcons">
-            </button>
-        </div>
-    </div>
-
-
+    <canvas class="fullscreen" id="canvas"></canvas>
+    <!-- <div id="game"> </div> -->
 </body>
 
 </html>
