feat: add summary plane wip

--- a/DiceCup.html
+++ b/DiceCup.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="Game/Script/Styling/Hud.css" />
     <link rel="stylesheet" href="Game/Script/Styling/Game.css" />
     <link rel="stylesheet" href="Game/Script/Styling/Categories.css" />
+    <link rel="stylesheet" href="Game/Script/Styling/Summary.css" />
     <link rel="stylesheet" href="Game/Script/Styling/Transitions.css" />
     <link href='https://fonts.googleapis.com/css?family=Bungee' rel='stylesheet'>
     <!--Editor settings of this project-->
