--- a/DiceCup.html
+++ b/DiceCup.html
@@ -4,7 +4,7 @@
 <head>
     <title>Dice Cup</title>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="Game/Assets/images/icons/favicons/favicon.ico">
 
     <link rel="stylesheet" href="Game/Script/Styling/ColorPalette.css" />
     <link rel="stylesheet" href="Game/Script/Styling/Variables.css" />
