--- a/DiceCup.html
+++ b/DiceCup.html
@@ -66,10 +66,11 @@
     </script>
 
     <canvas class="fullscreen" id="canvas"></canvas>
-    <div id="loadingScreen"
-        style="width: 100%; height: 100%; background: #1C1C1C; display: flex; justify-content: center; align-items: center;">
-        <img src="Game\Assets\images\fudge_logo.svg" style=" width: 20%;">
+
+    <div id="loadingScreen">
+        <img id="loadingImg" src="Game\Assets\images\fudge_logo.svg">
     </div>
+
 </body>
 
 </html>
