--- a/DiceCup.html
+++ b/DiceCup.html
@@ -46,6 +46,7 @@
     <!--Load FUDGE. You may want to download local copies to work offline and be independent from future changes! Developers working on FUDGE itself may want to create symlinks-->
     <script type="text/javascript" src="https://jirkadelloro.github.io/FUDGE/Core/Build/FudgeCore.js"></script>
     <script type="text/javascript" src="https://jirkadelloro.github.io/FUDGE/Aid/Build/FudgeAid.js"></script>
+    <script type="text/javascript" src="https://jirkadelloro.github.io/FUDGE/Net/Build/Client/FudgeClient.js"></script>
 
     <link rel="manifest" href="manifest.json" />
 
