feat:  user and room renames

--- a/DiceCup.html
+++ b/DiceCup.html
@@ -75,7 +75,7 @@
     <canvas class="fullscreen" id="canvas"></canvas>
 
     <div id="loadingScreen">
-        <img id="loadingImg" src="Game\Assets\images\fudge_logo.svg">
+        <img id="loadingImg" src="Game\Assets\images\fudge_logo_temp.png">
     </div>
 
 </body>
