feat: use local physics

--- a/DiceCup.html
+++ b/DiceCup.html
@@ -41,13 +41,14 @@
     <script> fudgeConfig = { antialias: true, alpha: true } </script>
 
     <!--Activate the following line to include the FUDGE-version of Oimo-Physics. You may want to download a local copy to work offline and be independent from future changes!-->
-    <script type="text/javascript" src="https://jirkadelloro.github.io/FUDGE/Physics/OimoPhysics.js"></script>
+    <!-- <script type="text/javascript" src="https://jirkadelloro.github.io/FUDGE/Physics/OimoPhysics.js"></script> -->
 
     <!--Load FUDGE. You may want to download local copies to work offline and be independent from future changes! Developers working on FUDGE itself may want to create symlinks-->
     <!-- <script type="text/javascript" src="https://jirkadelloro.github.io/FUDGE/Core/Build/FudgeCore.js"></script>
     <script type="text/javascript" src="https://jirkadelloro.github.io/FUDGE/Aid/Build/FudgeAid.js"></script>
     <script type="text/javascript" src="https://jirkadelloro.github.io/FUDGE/Net/Build/Client/FudgeClient.js"></script> -->
 
+    <script type="text/javascript" src="./Library/Physics/OimoPhysics.js"></script>
     <script type="text/javascript" src="./Library/Core/Build/FudgeCore.js"></script>
     <script type="text/javascript" src="./Library/Aid/Build/FudgeAid.js"></script>
     <script type="text/javascript" src="./Library/Net/Build/Client/FudgeClient.js"></script>
